--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "chai": "^3.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^2.2.5",
-    "rimraf": "^2.4.0",
-    "commander": "^2.9.0",
-    "express": "^4.14.0"
+    "rimraf": "^2.4.0"
   },
   "dependencies": {
-    "mongodb": "2.2.19",
-    "q": "^1.4.1"
+    "commander": "^2.9.0",
+    "express": "^4.14.0",
+    "mongodb": "^2.2.19",
+    "q": "^1.4.1",
+    "superagent": "^2.2.0"
   }
 }
