--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "rimraf": "^2.4.0"
   },
   "dependencies": {
+    "body-parser": "^1.16.0",
     "commander": "^2.9.0",
     "express": "^4.14.0",
     "mongodb": "^2.2.19",
