--- a/config/components.json
+++ b/config/components.json
@@ -14,6 +14,7 @@
     "events": [
       "COMMIT"
     ],
+    "maximumConcurrentJobs": 1,
     "addAtProjectCreation": true,
     "activeAtProjectCreation": true,
     "mongoUri": "mongodb://127.0.0.1:27017/webgme_constraint_results",
